--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <meta-data
             android:name="com.google.android.geo.API_KEY"
-           android:value="AIzaSyDD0BeFvl5sjqLw-Zs7gzOmMnlAvIZYjsA"/>
+           android:value="YOUR_API_CODE"/>
     
     </application>
 
